<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_photo"
            android:icon="@drawable/ic_photo"
            android:title="@string/menu_my_photo" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_upload"
            android:title="@string/menu_upload" />
        <item
            android:id="@+id/nav_coupons"
            android:icon="@drawable/ic_coupons"
            android:title="@string/menu_coupons"/>
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_photo"
            android:title="@string/menu_feed"
            android:visible="false"/>
    </group>
</menu>
