<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_photo">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.WeShowedUp.radharanipoojagallery.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

<!--    <fragment-->
<!--        android:id="@+id/nav_profile"-->
<!--        android:name="com.WeShowedUp.radharanipoojagallery.ui.myphoto.GalleryFragment"-->
<!--        android:label="@string/menu_profile"-->
<!--        tools:layout="@layout/fragment_gallery" />-->

    <fragment
        android:id="@+id/nav_my_photo"
        android:name="com.WeShowedUp.radharanipoojagallery.ui.myphoto.MyPhotoFragment"
        android:label="@string/menu_my_photo"
        tools:layout="@layout/fragment_myphoto" />

    <fragment
        android:id="@+id/nav_upload"
        android:name="com.WeShowedUp.radharanipoojagallery.ui.upload.UploadFragment"
        android:label="@string/menu_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/nav_coupons"
        android:name="com.WeShowedUp.radharanipoojagallery.ui.coupon.CouponFragment"
        android:label="@string/menu_coupons"
        tools:layout="@layout/fragment_coupon" />
<!--    <fragment-->
<!--        android:id="@+id/nav_send"-->
<!--        android:name="com.WeShowedUp.radharanipoojagallery.ui.send.SendFragment"-->
<!--        android:label="@string/menu_send"-->
<!--        tools:layout="@layout/fragment_send" />-->
</navigation>